--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
